[gd_scene load_steps=3 format=3 uid="uid://vipso40gmbeq"]

[ext_resource type="Script" path="res://Scripts/laser.gd" id="1_oysik"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_g2lc2"]

[node name="Laser" type="Node2D"]
script = ExtResource("1_oysik")

[node name="Line2D" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 833, 0)
default_color = Color(0.948262, 0.0830758, 0, 1)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_g2lc2")

[node name="attack_timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
